--- a/release/30.09.2022.md
+++ b/release/30.09.2022.md
@@ -23,6 +23,7 @@ La siguiente versión de la aplicación web contempla los siguientes features, c
 ### Workspaces
 
 - GES-545: Agregar en automático fecha de creación de la tarea en historial de actividad
+- GES-625: Los email de notificaciones para el módulo de workspace deben llegar al correo organizacional del usuario (no personal)
 
 ### Errores
 
