--- a/release/24.02.2023.md
+++ b/release/24.02.2023.md
@@ -1,4 +1,4 @@
-## App Release 16.02.2023
+## App Release 24.02.2023
 
 La siguiente versión de la aplicación web contempla los siguientes features, cambios y correcciones de errores:
 
@@ -75,3 +75,5 @@ La siguiente versión de la aplicación web contempla los siguientes features, c
 - GES-783: Añadir endpoints de acceso a data (API) según requerimientos de breik.
 - GES-790: Permitir lectura de turnos desde break.
 - GES-784: Permitir crear turnos "tipo break".
+- GES-787: Permitir crear marcas en diferentes días y carga de turnos (mostrar) que puedan superar el día.
+- GES-815: Almacenar fechas de marcas realizadas.
