--- a/release/05.05.2023.md
+++ b/release/05.05.2023.md
@@ -24,6 +24,7 @@ La siguiente versión de la aplicación web contempla los siguientes features, c
 - GES-917: No mostrar usuarios desactivados en selectores de Gestión de días y generación de reportes.
 - GES-928: Eliminar registros particulares de "worker day".
 - GES-908: Entregar configuración a APP AZÚL sobre activación de validación de centros de gestión en marca tipo checkpoint.
+- GES-927: Edición datos (solicitud de días) de marcación CAI.
 
 ### Gestión de días
 
